--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain-groq>=1.0.0",
     "langchain-tavily>=0.2.12",
     "langgraph>=1.0.1",
+    "langgraph-cli[inmem]>=0.4.4",
     "langsmith>=0.4.37",
     "python-dotenv>=1.1.1",
 ]
