simple multiagent implemented

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "langchain>=1.0.1",
+    "langchain-community>=0.4",
     "langchain-groq>=1.0.0",
     "langchain-tavily>=0.2.12",
     "langgraph>=1.0.1",
